<resources>
    <string name="app_name">MyAppSpk</string>
    <string name="search_box_text"></string>
    <string name="button_search">Найти</string>
    <string name="hint_search">Поиск по названию компании, ИНН, ОГРН или ФИО</string>
    <string name="text_header">ПРОВЕРКА КОНТРАГЕНТОВ</string>
    <string name="header_persona">Работайте с теми, кому доверяете</string>
    <string name="paragraph_persona">Снижаем потенциальные угрозы для бизнеса: блокировки расчетного счета, штрафы ФНС, неплатежи, невыполнение обязательств.</string>
    <string name="photo_body_description">Фото тела приложения</string>
    <string name="header_companyName">Название</string>
    <string name="header_formed">Образовано</string>
    <string name="header_address">Адрес</string>
    <string name="header_num_of_employees">Численность сотрудников</string>
    <string name="header_nalog">Специальный режим налогооблажения</string>
    <string name="header_kgn">Участие в КГН</string>
    <string name="header_supervisor">Руководитель</string>
    <string name="company_info" />
    <string name="company">Компания</string>
    <string name="not_data_traffic">Нет данных</string>
    <string name="negative_factors_traffic">Негативные факторы</string>
    <string name="attention_traffic">Обратите внимание</string>
    <string name="all_good_traffic">Всё хорошо</string>
</resources>
